--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-export DEBUG=true 
+export DEBUG_MODE=true 
 
 # *****************************************************************************
 # EDITOR CONFIG
