🔧 🙈 Update gitignore and direnv config

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,24 @@
-#!/bin/bash
+#!/bin/${SHELL}
 
 export DEBUG_MODE=true 
+
+reload(){
+  case ${SHELL} in 
+    bash)
+      ${SHELL} -c "source ~/.bashrc"
+      ;;
+    zsh)
+      ${SHELL} -c "source ~/.zshrc"
+      ;;
+    *)
+      return
+      ;;
+  esac
+}
+
+# For export function in direnv, see: 
+# https://github.com/direnv/direnv/issues/73
+export_function reload
 
 # *****************************************************************************
 # EDITOR CONFIG
