--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# direnv files
+.direnv
+.envrc
+
 # Created by https://www.gitignore.io/api/vim
 # Edit at https://www.gitignore.io/?templates=vim
 
