♻️ Refactor to optimize

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,13 @@
 #!/bin/${SHELL}
 
+layout_pipenv
 export DEBUG_MODE=true 
+export OS_USER_DOMAIN_NAME="DOMAIN"
+export OS_PROJECT_NAME="PROJECT"
+export TMUX="true"
+export KEEPASS_TYPE=perso
+#export KEEPASS_FILE="/media/secure_usb/security/keepass/keyfile.gpg"
+#export KEEPASS_DB="/home/rdeville/perso/cloud_wolkli/perso_f.kdbx"
 
 reload(){
   case ${SHELL} in 
