🎨🐛 Fixing some bugs. Improve speed

--- a/.envrc
+++ b/.envrc
@@ -1,31 +1,12 @@
-#!/bin/${SHELL}
+#!/bin/bash
 
-layout_pipenv
-export DEBUG_MODE=true 
 export OS_USER_DOMAIN_NAME="DOMAIN"
 export OS_PROJECT_NAME="PROJECT"
 export TMUX="true"
 export KEEPASS_TYPE=perso
-#export KEEPASS_FILE="/media/secure_usb/security/keepass/keyfile.gpg"
-#export KEEPASS_DB="/home/rdeville/perso/cloud_wolkli/perso_f.kdbx"
-
-reload(){
-  case ${SHELL} in 
-    bash)
-      ${SHELL} -c "source ~/.bashrc"
-      ;;
-    zsh)
-      ${SHELL} -c "source ~/.zshrc"
-      ;;
-    *)
-      return
-      ;;
-  esac
-}
-
-# For export function in direnv, see: 
-# https://github.com/direnv/direnv/issues/73
-export_function reload
+export VIRTUAL_ENV=/home/user/.local/share/virtualenvs/prompt-ABCDEF
+export KUBE_CONTEXT=cluster:namespace
+export VCSH_REPO_NAME=prompt
 
 # *****************************************************************************
 # EDITOR CONFIG
