📝💡✅ Huge update on test script process
Huge rework of script test.sh to be more userfriendly with dialog for
beginners and options to avoid dialog boxes.

Rework dockerfile for bash and zsh to not store main variables, i.e.
SHELL, SHELL_APP and PROMPT_VERSION in the image but are now passed as
argument determined by script test.sh

Update .envrc file in the image to not mess with the .envrc of the repo.
Now .envrc in the image press a line to ask user to press <Enter> once
in the docker to have all segments prompted.

--- a/test/bash/Dockerfile
+++ b/test/bash/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update \
 ENV LANG en_US.UTF-8 
 ENV LC_ALL en_US.UTF-8
 
-COPY . /root/
+WORKDIR /root
 
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
@@ -18,9 +18,7 @@ RUN apt-get update \
         git \
         python
 
-RUN cd /root && direnv allow
-RUN cd /root 
-RUN mv /root/hosts/common.sh /root/hosts/common.sh.bak
-RUN mv /root/test/bash/.bashrc /root/.bashrc
+COPY ./test/bash/.bashrc /root/.bashrc
+COPY ./test/.envrc /root/.envrc
+RUN direnv allow
 RUN chsh -s /bin/bash  root
-# ENTRYPOINT /bin/bash -c 'source ~/.bashrc && echo "$PS1"'
